--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <body>
     <main>
       <div id="text">
+        <h1>Week 3: Data Scrape</h1>
         <p>The aim of this dataset is to provide a map of all the images that could be related to a specific argument.</p>
         <p>To do this I ideated a process that analyses the text of a specific Wikipedia page and creates a list of all the links
           found. Then, a further process iterates through all links, visits those pages and analyses the HTML document to collect 
