--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           found. Then, a further process iterates through all links, visits those pages and analyses the HTML document to collect 
           all the images. Considering the large number of files collected, I decided to collect the only URL links to the images.
         </p>
+        <p>You can find the data from this <a href="https://github.com/samuelealbani/data_scrape/blob/main/DataRetrieval.json">link</a>.</p>
         
       </div>
     </main>
