--- a/index.html
+++ b/index.html
@@ -20,13 +20,29 @@
     <main>
       <div id="text">
         <h1>Week 3: Data Scrape</h1>
-        <p>The aim of this dataset is to provide a map of all the images that could be related to a specific argument.</p>
-        <p>To do this I ideated a process that analyses the text of a specific Wikipedia page and creates a list of all the links
-          found. Then, a further process iterates through all links, visits those pages and analyses the HTML document to collect 
-          all the images. Considering the large number of files collected, I decided to collect the only URL links to the images.
+        <p>
+          The aim of the idea underlying my process of internet scraping is to make visible the entire 
+          set of possible visual connections that can be created around a specific argument. In this case, 
+          I decided to symbolically focus my research on the notion of “exploration”, but the program I’ve 
+          written can be applied to any Wikipedia page.   
         </p>
-        <p>You can find the data from this <a href="https://github.com/samuelealbani/data_scrape/blob/main/DataRetrieval.json">link</a>.</p>
-        
+        <p>
+          To do this I created a p5.js sketch combining the two examples provided for the lab activity: the 
+          “Node Web Scrape Simple” and the “Node Web Scrape Image”. In fact, the process involves both HTML 
+          analysis and image downloading. The algorithm analyses the text of a specific Wikipedia page and 
+          creates a list of all the links found. Then, a further process iterates through all links, visits 
+          those pages, and analyses the HTML document to find any tag <img> ‘dom’ elements containing the 
+          properties called href, useful to access to the images and eventually download and collect them 
+          as files on my local machine.
+        </p>
+        <p>
+          You can find the data from this <a href="https://github.com/samuelealbani/data_scrape/blob/main/DataRetrieval.json">link</a>.
+        </p>
+        <p>
+          Considering the large number of files that I found, I decided, at this stage of the process, to 
+          collect the only URL links to the images. Next week I will try to use this data set to create an interactive 
+          visualisation using p5.js.
+        </p>
       </div>
     </main>
     <script src="javascript/sketch.js"></script>
