--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           as files on my local machine.
         </p>
         <p>
-          You can find the data from this <a href="https://github.com/samuelealbani/data_scrape/blob/main/DataRetrieval.json">link</a>.
+          You can find the dataset visiting this <a href="https://github.com/samuelealbani/data_scrape/blob/main/DataRetrieval.json">link</a>.
         </p>
         <p>
           Considering the large number of files that I found, I decided, at this stage of the process, to 
